--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,4 @@
 spring.application.name=securityDemo
+spring.h2.console.enabled=true
+spring.datasource.url=jdbc:h2:mem:test
+#change the jdbc url to this above one
